<resources>
    <string name="take_picture">Picture</string>
    <string name="start_record">Start</string>
    <string name="stop_record">Stop</string>
    <string name="app_name">Driver Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_obd">OBD</string>

    <string name="name_dialog">Settings</string>
    <string name="video_settings">Video settings</string>
    <string name="audio_settings">Audio settings</string>
    <string name="memory_settings">Memory settings</string>
    <string name="time_settings">Recording time</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_trips_list">Checking history</string>
    <string name="menu_trip_list">Checking history</string>
    <string name="menu_item_trip_delete">Delete</string>
    <string name="menu_start_live_data">Start Live Data</string>
    <string name="menu_stop_live_data">Stop Live Data</string>
    <string name="menu_settings">Settings</string>
    <string name="title_pref_obd">OBD Preferences</string>
    <string name="text_save_trip_not_available">Sorry, history will not be saved.</string>
    <string name="pref_obd_protocols_title">OBD Protocol</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
</resources>
