<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_name"

        android:title="@string/video_settings"
        app:showAsAction="always"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/action_name2"

        android:title="@string/audio_settings"
        app:showAsAction="always"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/action_name3"

        android:title="@string/memory_settings"
        app:showAsAction="always"
        android:orderInCategory="0"/>
    <item
        android:id="@+id/action_name4"

        android:title="@string/time_settings"
        app:showAsAction="always"
        android:orderInCategory="0"/>


</menu>
