<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    android:weightSum="1">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnTakePicture"
        android:layout_alignParentTop="true"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_weight="0.48"></SurfaceView>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <Button
            android:id="@+id/btnStartRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickStartRecord"
            android:text="@string/start_record" />

        <Button
            android:id="@+id/btnStopRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTakePicture"
            android:onClick="onClickStopRecord"
            android:text="@string/stop_record">

        </Button>

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPicture"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/btnNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickOpenNavigation"
            android:text="@string/title_activity_navigation" />
        <Button
            android:id="@+id/btnOBD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickOpenOBD"
            android:text="@string/title_activity_obd" />

    </LinearLayout>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:textColor="#f00"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/speedView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/chronometer"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/chronometer"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:textSize="25sp" />


</RelativeLayout>